footer without icons and bottom next

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
         <ul class="links__menu--ul">
           <li class="links__menu--li">
             <a
-              href="products"
+              href="#products"
               class="links__menu--link"
             >
               Products
@@ -99,7 +99,7 @@
           </li>
           <li class="links__menu--li">
             <a
-              href="about-us"
+              href="#about-us"
               class="links__menu--link"
             >
               About Us
@@ -107,7 +107,7 @@
           </li>
           <li class="links__menu--li">
             <a
-              href="blog"
+              href="#blog"
               class="links__menu--link"
             >
               Blog
@@ -131,7 +131,12 @@
     </div>
 
     <main class="main">
-      <h2 class="title main__title title__main">What we bake</h2>
+      <h2
+        class="title main__title title__main"
+        id="products"
+      >
+        What we bake
+      </h2>
       <p class="text main__text text__main">
         We can customize our cookies right for your needs. Just imagine it
       </p>
@@ -144,7 +149,7 @@
 
         <h3 class="product__title title title__product">Cakes</h3>
         <p class="product__text text text__product">
-          Oatmeal cookies with golden raisins, orange zest and chocolate chips
+          Oatmeal cakes with golden raisins, orange zest and chocolate chips
         </p>
         <a
           href="#"
@@ -274,6 +279,176 @@
         </a>
       </div>
     </main>
+
+    <section class="section section__about-us section-about-us">
+      <h2
+        class="title section-about-us__title title__about-us"
+        id="about-us"
+      >
+        Few words About us
+      </h2>
+      <p class="text section-about-us__text text__about-us">
+        Like many design teams, Onfido made the transition from Abstract +
+        Sketch, to Figma in the last couple of years. One of the common
+        resistance points internally before making that switch, was Figma’s lack
+        of Git-style branching that Abstract enabled. The design team had come
+        to rely on branching and had built a lot of our processes around it.
+      </p>
+
+      <div class="numbers section-about-us__numbers">
+        <h3
+          class="title section-about-us__numbers--title title__about-us--numbers"
+        >
+          2015
+        </h3>
+        <p class="text section-about-us__numbers--text text__about-us--numbers">
+          Foundation year
+        </p>
+      </div>
+
+      <div class="numbers section-about-us__numbers">
+        <h3
+          class="title section-about-us__numbers--title title__about-us--numbers"
+        >
+          23
+        </h3>
+        <p class="text section-about-us__numbers--text text__about-us--numbers">
+          Stores
+        </p>
+      </div>
+
+      <div class="numbers section-about-us__numbers">
+        <h3
+          class="title section-about-us__numbers--title title__about-us--numbers"
+        >
+          155
+        </h3>
+        <p class="text section-about-us__numbers--text text__about-us--numbers">
+          Companies
+        </p>
+      </div>
+
+      <div class="numbers section-about-us__numbers">
+        <h3
+          class="title section-about-us__numbers--title title__about-us--numbers"
+        >
+          10K+
+        </h3>
+        <p class="text section-about-us__numbers--text text__about-us--numbers">
+          Clients
+        </p>
+      </div>
+
+      <p
+        class="text section-about-us__numbers--text text__about-us--numbers"
+      ></p>
+      <img
+        src="./images/Crumbs-small.jpg"
+        class="section-about-us__image"
+        alt="#"
+      />
+    </section>
+    <footer class="footer">
+      <div class="footer__container">
+        <img
+          src="./images/logos/Logo-white.svg"
+          alt="#"
+          class="footer__container--logo"
+        />
+
+        <nav class="links footer__container--links links__footer">
+          <p class="links__footer--title">Menu</p>
+          <ul class="links__footer--ul">
+            <li class="links__footer--li">
+              <a
+                href="#products"
+                class="links__footer--link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="links__footer--li">
+              <a
+                href="#about-us"
+                class="links__footer--link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="links__footer--li">
+              <a
+                href="#"
+                class="links__footer--link"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="links__footer--li">
+              <a
+                href="https://www.osohq.com/privacy?utm_source=ppc&utm_medium=google&utm_campaign=DynamicSearch&utm_content=179698179487&gad_source=1&gad_campaignid=22311018434&gclid=CjwKCAjwi-DBBhA5EiwAXOHsGXu-oRXqKYMTzHWzUfaF2bjgoxX4_AmDL4ona7SlZSud8vbw8B8pDRoCMCEQAvD_BwE"
+                class="links__footer--link"
+                target="_blank"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <p
+          class="footer__container--title title title__contact-us"
+          id="contact-us"
+        >
+          Contact
+          <br />
+          us
+        </p>
+
+        <nav class="links footer__container--links links__footer">
+          <p class="links__footer--title">Call us</p>
+          <ul class="links__footer--ul">
+            <li class="links__footer--li">
+              <a
+                href="tel:6295550129"
+                class="links__footer--link"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+            <li class="links__footer--li">
+              <a
+                href="tel:6035550123"
+                class="links__footer--link"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+            <li class="links__footer--li">
+              <a
+                href="tel:7045550127"
+                class="links__footer--link"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <nav class="links footer__container--links links__footer">
+          <p class="links__footer--title">Email us</p>
+          <ul class="links__footer--ul">
+            <li class="links__footer--li">
+              <a
+                href="mailto:bakerlab@example.com"
+                class="links__footer--link"
+              >
+                bakerlab@example.com
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
