--- a/src/index.html
+++ b/src/index.html
@@ -356,7 +356,9 @@
           class="footer__container--logo"
         />
 
-        <nav class="links footer__container--links links__footer">
+        <nav
+          class="links footer__container--links footer__container--links1 links__footer"
+        >
           <p class="links__footer--title">Menu</p>
           <ul class="links__footer--ul">
             <li class="links__footer--li">
@@ -404,7 +406,9 @@
           us
         </p>
 
-        <nav class="links footer__container--links links__footer">
+        <nav
+          class="links footer__container--links footer__container--links2 links__footer"
+        >
           <p class="links__footer--title">Call us</p>
           <ul class="links__footer--ul">
             <li class="links__footer--li">
@@ -434,7 +438,9 @@
           </ul>
         </nav>
 
-        <nav class="links footer__container--links links__footer">
+        <nav
+          class="links footer__container--links footer__container--links3 links__footer"
+        >
           <p class="links__footer--title">Email us</p>
           <ul class="links__footer--ul">
             <li class="links__footer--li">
@@ -447,6 +453,44 @@
             </li>
           </ul>
         </nav>
+
+        <div class="footer__container--media media">
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            class="media__social-link"
+          >
+            <img
+              src="./images/logos/facebook.svg"
+              alt="Facebook"
+              class="media__social-icon"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="media__social-link"
+          >
+            <img
+              src="./images/logos/instagram.svg"
+              alt="Instagram"
+              class="footer__social-icon"
+            />
+          </a>
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <img
+              src="./images/logos/twitter.svg"
+              alt="Twitter"
+              class="footer__social-icon"
+            />
+          </a>
+        </div>
+
+        <p class="links__footer--title">© Bakerlab 2022</p>
       </div>
     </footer>
 
