--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
       <p class="text main__text text__main">
         We can customize our cookies right for your needs. Just imagine it
       </p>
-      <div class="main__product product product__1">
+      <div class="main__product product main__product--1">
         <img
           src="./images/Products1.jpg"
           class="main__image image image__main"
@@ -163,7 +163,7 @@
           <span class="button__product--text">ORDER</span>
         </a>
       </div>
-      <div class="main__product product product__2">
+      <div class="main__product product main__product--2">
         <img
           src="./images/Products2.jpg"
           class="main__image image image__main"
@@ -186,7 +186,7 @@
           <span class="button__product--text">ORDER</span>
         </a>
       </div>
-      <div class="main__product product product__3">
+      <div class="main__product product main__product--3">
         <img
           src="./images/Products3.jpg"
           class="main__image image image__main"
@@ -209,7 +209,7 @@
           <span class="button__product--text">ORDER</span>
         </a>
       </div>
-      <div class="main__product product product__4">
+      <div class="main__product product main__product--4">
         <img
           src="./images/Products4.jpg"
           class="main__image image image__main"
@@ -232,7 +232,7 @@
           <span class="button__product--text">ORDER</span>
         </a>
       </div>
-      <div class="main__product product product__5">
+      <div class="main__product product main__product--5">
         <img
           src="./images/Products5.jpg"
           class="main__image image image__main"
@@ -241,7 +241,9 @@
 
         <h3 class="product__title title title__product">Cakes</h3>
         <p class="product__text text text__product">
-          Chocolate salted caramel, Vanilla frutti pebbles
+          Chocolate salted caramel, Vanilla frutti
+          <br />
+          pebbles
         </p>
         <a
           href="#"
@@ -255,7 +257,7 @@
           <span class="button__product--text">ORDER</span>
         </a>
       </div>
-      <div class="main__product product product__6">
+      <div class="main__product product main__product--6">
         <img
           src="./images/Products6.jpg"
           class="main__image image image__main"
