abous-us tablet

--- a/src/index.html
+++ b/src/index.html
@@ -297,7 +297,9 @@
         to rely on branching and had built a lot of our processes around it.
       </p>
 
-      <div class="numbers section-about-us__numbers">
+      <div
+        class="numbers section-about-us__numbers section-about-us__numbers--year"
+      >
         <h3
           class="title section-about-us__numbers--title title__about-us--numbers"
         >
@@ -308,7 +310,9 @@
         </p>
       </div>
 
-      <div class="numbers section-about-us__numbers">
+      <div
+        class="numbers section-about-us__numbers section-about-us__numbers--stories"
+      >
         <h3
           class="title section-about-us__numbers--title title__about-us--numbers"
         >
@@ -319,7 +323,9 @@
         </p>
       </div>
 
-      <div class="numbers section-about-us__numbers">
+      <div
+        class="numbers section-about-us__numbers section-about-us__numbers--companies"
+      >
         <h3
           class="title section-about-us__numbers--title title__about-us--numbers"
         >
@@ -330,7 +336,9 @@
         </p>
       </div>
 
-      <div class="numbers section-about-us__numbers">
+      <div
+        class="numbers section-about-us__numbers section-about-us__numbers--clients"
+      >
         <h3
           class="title section-about-us__numbers--title title__about-us--numbers"
         >
