tablet solution ready

--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
         />
 
         <nav
-          class="links footer__container--links footer__container--links1 links__footer"
+          class="links footer__container--links footer__container--links1 links__footer footer__container--element"
         >
           <p class="links__footer--title">Menu</p>
           <ul class="links__footer--ul">
@@ -408,7 +408,7 @@
         </nav>
 
         <p
-          class="footer__container--title title title__contact-us"
+          class="footer__container--title title title__contact-us footer__container--element"
           id="contact-us"
         >
           Contact
@@ -417,7 +417,7 @@
         </p>
 
         <nav
-          class="links footer__container--links footer__container--links2 links__footer"
+          class="links footer__container--links footer__container--links2 links__footer footer__container--element"
         >
           <p class="links__footer--title">Call us</p>
           <ul class="links__footer--ul">
@@ -449,7 +449,7 @@
         </nav>
 
         <nav
-          class="links footer__container--links footer__container--links3 links__footer"
+          class="links footer__container--links footer__container--links3 links__footer footer__container--element"
         >
           <p class="links__footer--title">Email us</p>
           <ul class="links__footer--ul">
@@ -464,7 +464,7 @@
           </ul>
         </nav>
 
-        <div class="footer__container--media media">
+        <div class="footer__container--media media footer__container--element">
           <a
             href="https://www.facebook.com"
             target="_blank"
@@ -500,7 +500,11 @@
           </a>
         </div>
 
-        <p class="links__footer--title">© Bakerlab 2022</p>
+        <p
+          class="links__footer--title footer__container--signature footer__container--element"
+        >
+          © Bakerlab 2022
+        </p>
       </div>
     </footer>
 
