tablet solution ready+

--- a/src/index.html
+++ b/src/index.html
@@ -484,18 +484,18 @@
             <img
               src="./images/logos/instagram.svg"
               alt="Instagram"
-              class="footer__social-icon"
+              class="media__social-icon"
             />
           </a>
           <a
             href="https://www.twitter.com"
             target="_blank"
-            class="footer__social-link"
+            class="media__social-link"
           >
             <img
               src="./images/logos/twitter.svg"
               alt="Twitter"
-              class="footer__social-icon"
+              class="media__social-icon"
             />
           </a>
         </div>
