--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,38 @@
           alt="#"
         />
 
+        <nav class="navigation-menu">
+          <a
+            href="#products"
+            class="navigation-menu__link"
+          >
+            Products
+          </a>
+          <a
+            href="#about-us"
+            class="navigation-menu__link"
+          >
+            About Us
+          </a>
+          <a
+            href="#blog"
+            class="navigation-menu__link"
+          >
+            Blog
+          </a>
+          <a
+            href="#contact-us"
+            class="navigation-menu__link navigation-menu__contact"
+          >
+            <img
+              src="/src/images/logos/Icon-phone.svg"
+              alt="#"
+              class="navigation-menu__contact--image"
+            />
+            <span>Contact Us</span>
+          </a>
+        </nav>
+
         <a
           class="navigation-burger"
           href="#menu"
