full page and solution ready

--- a/src/index.html
+++ b/src/index.html
@@ -395,7 +395,7 @@
         <img
           src="./images/logos/Logo-white.svg"
           alt="#"
-          class="footer__container--logo"
+          class="footer__container--logo logo__footer"
         />
 
         <nav
@@ -443,8 +443,7 @@
           class="footer__container--title title title__contact-us footer__container--element"
           id="contact-us"
         >
-          Contact
-          us
+          Contact us
         </p>
 
         <nav
