--- a/src/index.html
+++ b/src/index.html
@@ -24,20 +24,68 @@
     />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
 
     <script src="scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__top">
-        <a href="#">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
           <img
-            src="images/Logo.png"
-            alt="Bakerlab logo"
+            src="./images/Logo.png"
+            alt="Page Logo"
+            class="icon icon--logo"
           />
         </a>
+
+        <nav class="nav top-bar__nav">
+          <ul class="nav__list nav__list--top-bar">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#what-we-bake"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#blog"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item nav__item--call">
+              <a
+                class="icon icon--phone"
+                href="#contacts"
+              ></a>
+              <a
+                href="#contacts"
+                class="nav__link nav__link--red"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
 
         <a
           href="#menu"
@@ -53,7 +101,7 @@
         <h1 class="header__title">Creative bakery</h1>
 
         <img
-          src="/src/images/cookie-photo.png"
+          src="./images/cookie-photo.png"
           alt="Cookie photo"
           class="header__photo"
         />
@@ -73,18 +121,406 @@
       </div>
     </header>
 
-    <aside class="menu"></aside>
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="./images/Logo.png"
+            alt="Page Logo"
+            class="icon icon--logo"
+          />
+        </a>
+
+        <a
+          href="#"
+          class="icon icon--close"
+        ></a>
+      </div>
+
+      <div class="menu__content">
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#what-we-bake"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link"
+                href="#blog"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item nav__item--call">
+              <a
+                class="icon icon--phone"
+                href="#contacts"
+              ></a>
+              <a
+                href="#contacts"
+                class="nav__link nav__link--red"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
     <main class="main">
-      <section class="products">
-        <h2>What we bake</h2>
-      </section>
+      <div class="main__content">
+        <section class="what-we-bake">
+          <div class="what-we-bake__header">
+            <h2
+              class="what-we-bake__title title"
+              id="what-we-bake"
+            >
+              What we bake
+            </h2>
 
-      <section class="about-us">
-        <h2>Few words About us</h2>
-      </section>
+            <p class="what-we-bake__description">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
+
+          <article class="article">
+            <img
+              src="./images/article-photo1.png"
+              alt="Cake photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Cakes</h3>
+
+            <p class="article__description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+
+          <article class="article">
+            <img
+              src="./images/article-photo2.png"
+              alt="Cake photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Cakes</h3>
+
+            <p class="article__description">
+              Chocolate biscuit coffee cake topped with a buttercream and powder
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+
+          <article class="article article--desktop-positioned">
+            <img
+              src="./images/article-photo3.png"
+              alt="Donut photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Donuts</h3>
+
+            <p class="article__description">
+              Light multi-layered croissant strewn with cinammon and almond
+              “petals”
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+
+          <article class="article">
+            <img
+              src="./images/article-photo4.png"
+              alt="Donut photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Donuts</h3>
+
+            <p class="article__description">
+              Light multi-layered croissant strewn with coconut and nuts
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+
+          <article class="article">
+            <img
+              src="./images/article-photo5.png"
+              alt="Donut photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Cakes</h3>
+
+            <p class="article__description">
+              Chocolate salted caramel, Vanilla frutti pebbles
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+
+          <article class="article">
+            <img
+              src="./images/article-photo6.png"
+              alt="Donut photo"
+              class="article__photo"
+            />
+
+            <h3 class="article__title">Cookies</h3>
+
+            <p class="article__description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+            <a
+              href="#"
+              class="article__link"
+            >
+              Order
+            </a>
+          </article>
+        </section>
+
+        <section class="about-us">
+          <h2
+            class="about-us__title title"
+            id="about-us"
+          >
+            Few words About us
+          </h2>
+
+          <p class="about-us__description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figmas
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+
+          <div class="about-us__statistic statistic">
+            <div class="statistic__element">
+              <p class="statistic__value">2015</p>
+              <p class="statistic__title">Foundation year</p>
+            </div>
+
+            <div class="statistic__element">
+              <p class="statistic__value">23</p>
+              <p class="statistic__title">Stores</p>
+            </div>
+
+            <div class="statistic__element">
+              <p class="statistic__value">155</p>
+              <p class="statistic__title">Companies</p>
+            </div>
+
+            <div class="statistic__element">
+              <p class="statistic__value">10k+</p>
+              <p class="statistic__title">Clients</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__content">
+        <a
+          href="#"
+          class="footer__logo"
+        >
+          <img
+            src="../src/images/logo-icon-footer.png"
+            alt="Page Logo"
+            class="icon icon--logo-footer"
+          />
+        </a>
+
+        <nav class="nav footer__nav-menu">
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer-grey"
+                href="#"
+              >
+                Menu
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="#what-we-bake"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="#about-us"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="#blog"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="#"
+              >
+                Terms & Privacy
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <h2 class="footer__title title title--footer">Contact us</h2>
+
+        <nav
+          class="nav footer__nav-call"
+          id="contacts"
+        >
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer-grey"
+                href="tel:(603) 555-0123"
+              >
+                call us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="tel:(629) 555-0129"
+              >
+                (629) 555-0129
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="tel:(603) 555-0123"
+              >
+                (603) 555-0123
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="tel:(704) 555-0127"
+              >
+                (704) 555-0127
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <nav class="nav footer__nav-email">
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer-grey"
+                href="mailto:bakerlab@example.com"
+              >
+                email us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                class="nav__link nav__link--footer"
+                href="mailto:bakerlab@example.com"
+              >
+                bakerlab@example.com
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div
+          class="footer__icons"
+          id="blog"
+        >
+          <a
+            href="#"
+            class="icon icon--facebook"
+          ></a>
+          <a
+            href="#"
+            class="icon icon--instagram"
+          ></a>
+          <a
+            href="#"
+            class="icon icon--twitter"
+          ></a>
+        </div>
+
+        <p class="footer__author-rights">© Bakerlab 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
