--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,503 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Creative Bakery</title>
+    <link
+      rel="icon"
+      href="./images/Logo.svg"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__content">
+        <div class="container">
+          <div class="top-bar top-bar--desktop">
+            <a
+              href="#"
+              class="top-bar__logo-link"
+            >
+              <img
+                src="./images/Logo.svg"
+                alt="logo"
+                class="top-bar__logo"
+              />
+            </a>
+            <a
+              href="#menu"
+              class="top-bar__icon-menu"
+            ></a>
+          </div>
+        </div>
+
+        <aside
+          class="menu page__menu"
+          id="menu"
+        >
+          <div class="top-bar menu__top">
+            <a
+              href="#"
+              class="top-bar__logo-link"
+            >
+              <img
+                src="./images/Logo.svg"
+                alt="logo"
+                class="top-bar__logo"
+              />
+            </a>
+            <a
+              href="#"
+              class="top-bar__icon-close"
+            ></a>
+          </div>
+
+          <div class="menu__content">
+            <nav class="menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#blog"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contact"
+                    class="nav__link nav__link-contact"
+                  >
+                    <img
+                      src="./images/icon/Icon-phone.svg"
+                      alt="phone"
+                      class="nav__link-icon"
+                    />
+                    <div class="nav__link-text">Contact us</div>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </aside>
+
+        <div class="container">
+          <div class="header__body">
+            <p class="header__description">
+              We bake your fantasies — croissants,
+              <br />
+              cakes, cookies, and cupcakes.
+            </p>
+            <div class="header__photo-wrapper">
+              <h1 class="header__title">Creative bakery</h1>
+              <div class="header__photo"></div>
+            </div>
+            <a
+              href="#about"
+              class="header__button"
+            >
+              <span class="header__button-icon"></span>
+              <span class="header__button-text">Learn more</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <h2
+            id="products"
+            class="main__title"
+          >
+            What we bake
+          </h2>
+          <p class="main__text">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+
+          <div class="product">
+            <div class="product__card">
+              <img
+                src="images/photo-product-01.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Cakes
+                </a>
+                <p class="product__text">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+
+            <div class="product__card">
+              <img
+                src="images/photo-product-06.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Cakes
+                </a>
+                <p class="product__text">
+                  Chocolate biscuit coffee cake topped with a buttercream and
+                  powder
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+
+            <div class="product__card">
+              <img
+                src="images/photo-product-05.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Donuts
+                </a>
+                <p class="product__text">
+                  Light multi-layered croissant strewn with cinammon and almond
+                  "petals"
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+
+            <div class="product__card">
+              <img
+                src="images/photo-product-04.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Donuts
+                </a>
+                <p class="product__text">
+                  Light multi-layered croissant strewn with coconut and nuts
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+
+            <div class="product__card">
+              <img
+                src="images/photo-product-03.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Cakes
+                </a>
+                <p class="product__text">
+                  Chocolate salted caramel, Vanilla frutti pebbles
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+
+            <div class="product__card">
+              <img
+                src="images/photo-product-02.png"
+                class="product__photo"
+                alt="Product photo"
+              />
+              <div class="product__card-description">
+                <a
+                  href="#"
+                  class="product__category"
+                >
+                  Cookies
+                </a>
+                <p class="product__text">
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+              </div>
+              <a
+                href="#contact"
+                class="product__button"
+              >
+                <span class="product__button-icon"></span>
+                <span class="product__button-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div
+            class="about"
+            id="about"
+          >
+            <div class="about__content">
+              <h2 class="main__title about__title">
+                Few words
+                <br />
+                About us
+              </h2>
+              <p class="main__text about__text">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma's lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+            </div>
+
+            <div class="about__statistics">
+              <div class="about__statistics-item">
+                <div class="about__statistics-number">2015</div>
+                <div class="about__statistics-text">Foundation year</div>
+              </div>
+
+              <div class="about__statistics-item">
+                <div class="about__statistics-number">23</div>
+                <div class="about__statistics-text">Stores</div>
+              </div>
+
+              <div class="about__statistics-item">
+                <div class="about__statistics-number">155</div>
+                <div class="about__statistics-text">Companies</div>
+              </div>
+
+              <div class="about__statistics-item">
+                <div class="about__statistics-number">10K+</div>
+                <div class="about__statistics-text">Clients</div>
+              </div>
+            </div>
+            <img
+              src="images/Crumbs.png"
+              alt="Crumbs"
+              class="about__background-image"
+            />
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer
+      class="footer"
+      id="contact"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__menu">
+            <a
+              href="#"
+              class="footer__logo-link"
+            >
+              <img
+                src="images/logo-w.svg"
+                alt="logo"
+                class="footer__logo"
+              />
+            </a>
+
+            <div class="footer__menu-items">
+              <h3 class="footer__menu-title">Menu</h3>
+              <nav class="footer__menu-nav">
+                <ul class="footer__nav-list">
+                  <li class="footer__nav-item">
+                    <a
+                      href="#products"
+                      class="footer__nav-link"
+                    >
+                      Products
+                    </a>
+                  </li>
+                  <li class="footer__nav-item">
+                    <a
+                      href="#about"
+                      class="footer__nav-link"
+                    >
+                      About Us
+                    </a>
+                  </li>
+                  <li class="footer__nav-item">
+                    <a
+                      href="#blog"
+                      class="footer__nav-link"
+                    >
+                      Blog
+                    </a>
+                  </li>
+                  <li class="footer__nav-item">
+                    <a
+                      href="#contact"
+                      class="footer__nav-link"
+                    >
+                      Terms & Privacy
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="footer__contacts">
+            <h2 class="footer__title">Contact us</h2>
+            <div class="footer__contact">
+              <div class="footer__contact-content">
+                <h3 class="footer__contact-title">Call us</h3>
+                <ul class="footer__phones footer__nav-list">
+                  <li>
+                    <a
+                      href="tel:6295550129"
+                      class="footer__contact-phone-email"
+                    >
+                      (629) 555-0129
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:6035550123"
+                      class="footer__contact-phone-email"
+                    >
+                      (603) 555-0123
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:7045550127"
+                      class="footer__contact-phone-email"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer__contact-email">
+                <h3 class="footer__contact-title">Email us</h3>
+                <a
+                  href="mailto:info@creativebakery.com"
+                  class="footer__contact-phone-email"
+                >
+                  bakerlab@example.com
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__social-buttons">
+            <a
+              href="https://facebook.com"
+              class="footer__social-icon footer__social-icon-fb"
+              target="_blank"
+              rel="noopener"
+            ></a>
+            <a
+              href="https://instagram.com"
+              class="footer__social-icon footer__social-icon-inst"
+              target="_blank"
+              rel="noopener"
+            ></a>
+            <a
+              href="https://twitter.com"
+              class="footer__social-icon footer__social-icon-x"
+              target="_blank"
+              rel="noopener"
+            ></a>
+          </div>
+
+          <div class="footer__copyright">© Bakerlab 2022</div>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
