--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
             />
             <a
               class="header__link"
-              href="#"
+              href="#about"
             >
               Learn more
             </a>
@@ -188,7 +188,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -218,7 +218,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -248,7 +248,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -277,7 +277,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -307,7 +307,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -337,7 +337,7 @@
                 </p>
                 <a
                   class="products__link"
-                  href="#"
+                  href="#footer"
                 >
                   Order
                 </a>
@@ -494,7 +494,8 @@
               <li class="footer__social-item">
                 <a
                   class="footer__social-link"
-                  href="#"
+                  href="https://www.facebook.com/"
+                  target="_blank"
                 >
                   <svg
                     width="24"
@@ -513,7 +514,8 @@
               <li class="footer__social-item">
                 <a
                   class="footer__social-link"
-                  href="#"
+                  href="https://www.instagram.com/"
+                  target="_blank"
                 >
                   <svg
                     width="24"
@@ -532,7 +534,8 @@
               <li class="footer__social-item">
                 <a
                   class="footer__social-link"
-                  href="#"
+                  href="https://x.com/"
+                  target="_blank"
                 >
                   <svg
                     width="24"
